samples/OK/return2.php
<?php
declare(strict_types=1);

$a = 5-1;

while($a !== 3)
{
    if(1)
    {
        return(50);
    }

    return(1);
}

return($a);
?>
