samples/SYNTAX_ERROR/while_else.php
<?php
declare(strict_types=1);
$a = 1;
while($a)
{
    $a = $a - 1;
}
else
